feat(bulk-import): use template from the configuration
