# workspaces/bulk-import/plugins/bulk-import-backend/src/schema/openapi.yaml
@@ -711,12 +711,7 @@ components:
     ExecuteTemplateRequest:
       title: Execute Template Request
       type: object
-      required:
-        - templateName
       properties:
-        templateName:
-          type: string
-          description: The name of the scaffolder template to execute.
         repositories:
           type: array
           items:
